# ExoRL

./: .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  demo.py  demo_RL.py  eval_generalisation.py  generate_demos.py  planets_demo.py  population_2500.csv  population_5000.csv  population_demo.py  pretrain_bc.py  pyproject.toml  science_demo.py  train_sac.py  transfer_vis_demo.py  transfer_viz_demo.py
.github/workflows/: ci.yml  release.yml  workflow.yml
core/: SCIENCE_ROADMAP.md  __init__.py  atmosphere_science.py  climate.py  comms.py  env.py  eval_generalisation.py  generator.py  geology.py  heliocentric.py  interior.py  interplanetary_env.py  kepler_catalog.py  launch_window.py  mission.py  observation.py  orbital_analysis.py  physics.py  planet.py  planet_io.py  population.py  power.py  science_ops_env.py  surface_energy.py  thermal_evolution.py  tidal.py
docs/: ASTROPHYSICS_TUTORIAL.md  TUTORIAL.md
examples/: demo_RL.py  planets_demo.py  population_demo.py  science_demo.py  transfer_viz_demo.py
examples/csv-data/: population_500.csv
exorl/: cli.py
exorl/commands/: __init__.py  demo.py  eval.py  eval_generalisation.py  figure.py  generate_demos.py  planet.py  population.py  pretrain_bc.py  train.py  train_sac.py
exorl/core/: __init__.py  atmosphere_science.py  climate.py  env.py  generator.py  geology.py  habitability.py  heliocentric.py  interplanetary_env.py  kepler_catalog.py  launch_window.py  mission.py  observation.py  physics.py  planet.py  planet_io.py  population.py  power.py  science_ops_env.py  soi.py  surface_energy.py  thermal_evolution.py
exorl/visualization/: __init__.py  visualizer.py
planet_rl/: cli.py
planet_rl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
planet_rl/commands/: eval_generalisation.py  generate_demos.py  pretrain_bc.py  train_sac.py
planet_rl/core/: __init__.py  atmosphere_science.py  env.py  geology.py  ground_track.py  habitability.py  kepler_catalog.py  observation.py  population.py  power.py  thermal_evolution.py
planet_rl/visualization/: __init__.py  visualizer.py
science_figures/: population_500.csv
scripts/: eval_generalisation.py  generate_demos.py  pretrain_bc.py  train_sac.py
tests/: test_calibration_presets.py  test_figure_regression_hash.py  test_smoke_cli.py
visualization/: __init__.py  visualizer.py
