[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exorl"
version = "0.1.2"
description = "A reinforcement learning + planetary science toolkit."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
    { name = "Weirdnemo", email = "nimesh.chn@gmail.com" }   
]

keywords = ["reinforcement-learning", "astrophysics", "planetary-science", "exoplanets", "gymnasium"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/Weirdnemo/ExoRL/"
Repository = "https://github.com/Weirdnemo/ExoRL/"
Issues = "https://github.com/Weirdnemo/ExoRL/issues"


[project.optional-dependencies]
rl = [
    "gymnasium",
    "stable-baselines3",
    "torch",
]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
exorl = "exorl.cli:main"

[tool.setuptools.packages.find]
include = ["exorl", "exorl.*"]
