[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exorl"
version = "0.1."
description = "A reinforcement learning + planetary science toolkit."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
    { name = "Weirdnemo", email = "nimesh.chn@gmail.com" }
]

keywords = ["reinforcement-learning", "astrophysics", "planetary-science", "exoplanets", "gymnasium"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/Weirdnemo/ExoRL/"
Repository = "https://github.com/Weirdnemo/ExoRL/"
Issues = "https://github.com/Weirdnemo/ExoRL/issues"


[project.optional-dependencies]
rl = [
    "gymnasium",
    "stable-baselines3",
    "torch",
]
science = [
    "astropy",
    "matplotlib",
]
dev = [
    "pytest",
    "ruff",
    "build",
    "python-semantic-release",
]
all = [
    "gymnasium",
    "stable-baselines3",
    "torch",
    "astropy",
    "matplotlib",
    "pytest",
    "ruff",
    "build",
    "python-semantic-release",
]

[project.scripts]
exorl = "exorl.cli:main"

[tool.setuptools.packages.find]
include = ["exorl", "exorl.*"]

[tool.semantic_release]
branch = "main"
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
changelog_file = "CHANGELOG.md"
build_command = "python -m build"
commit_message = "chore(release): {version}"
upload_to_pypi = false
upload_to_release = true
